--- a/app/src/main/res/layout/list_item_description.xml
+++ b/app/src/main/res/layout/list_item_description.xml
@@ -9,13 +9,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        android:padding="16dp"
         app:cardUseCompatPadding="true">
 
         <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp" />
 
     </com.google.android.material.card.MaterialCardView>
 </layout>
