--- a/app/src/main/res/layout/list_item_main.xml
+++ b/app/src/main/res/layout/list_item_main.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="vm"
-            type="jp.cordea.kompas.presentation.main.MainListItemViewModel" />
+            type="jp.cordea.kompas.main.MainListItemViewModel" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
